# EchoMind

./: .gitignore  Dashboard.py  Home.py  README.md  frontend.py  main.py  pyproject.toml
backend/: ai_agent.py  audio_emotion.py  database.py  facial_emotion.py  main.py  sentiment_analysis.py  tools.py
pages/: 1_Chat.py  2_Face.py  2_History.py  3_Voice.py  4_History.py
