[project]
name = "echomind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.7",
    "ollama>=0.6.0",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "twilio>=9.8.2",
    "uvicorn>=0.37.0",
]
