[project]
name = "echomind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.7",
    "ollama>=0.6.0",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.50.0",
    "streamlit-audiorec>=0.1.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "twilio>=9.8.2",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.9",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "mtcnn-opencv>=0.1.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "reportlab>=4.0.0",
    "vaderSentiment>=3.3.2",
]
